[package]
name = "tee-zettel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
tabled = "0.14.0"
toml = "0.8.8"

[dev-dependencies]
tempfile = "3.8.1"
